--- a/client/css/style.css
+++ b/client/css/style.css
@@ -46,3 +46,16 @@ h1 {
 .container {
     color: white;
 }
+
+html,
+body {
+    margin: 0;
+    overflow: hidden;
+    height: 100%;
+}
+
+/* Scale canvas with resize attribute to full size */
+canvas[resize] {
+    width: 100%;
+    height: 100%;
+}
