--- a/client/css/index.css
+++ b/client/css/index.css
@@ -10,15 +10,17 @@
 
 .line-center {
     display: inline-block;
-    vertical-align: middle;
+    vertical-align: middle; 
 }
 
 .footer {
     background-color: rgb(182, 182, 182);
     color: rgb(59, 59, 59);
     width: 100%;
-    position: absolute;
-    height: 3rem;
+    position: static;
+    height: 7%;
+    margin-top: 4%;
+    padding-bottom: 8px;
     bottom: 0;
 }
 
@@ -27,9 +29,28 @@
     color: rgb(59, 59, 59);
 }
 
-body{
+.footer-content {
+    margin-left: 1%;
+}
+
+.same-line {
+    display:inline-block
+}
+
+.toast {
+    background-color: lightslategrey;
+}
+
+.copy-button {
+    border: 1px;
+    border-style: solid;
+    border-color: black;
+    border-radius: 4px;
+    background-color: rgb(233, 233, 233);
+}
+
+body {
     position: relative;
-    padding-bottom: 6rem;
     min-height: 100%;
     background-color: rgb(233, 233, 233);
 }
@@ -51,6 +72,5 @@ h1 {
 .seperator-no-line {
     width: 100%;
     height: 1px;
-    margin-top: 1em;
-    margin-bottom: 1em;
+    margin-top: 2%;
 }
