Updated index.html css

--- a/client/css/index.css
+++ b/client/css/index.css
@@ -37,6 +37,10 @@
     display:inline-block
 }
 
+.email-text {
+    border-bottom: 2px dotted gray;
+}
+
 .toast {
     background-color: lightslategrey;
 }
